Выделены вспомогательные методы, создан вспомогательный класс для хранения свойств группы, использование вспомог класса в тестах

--- a/autotests-software-testing/autotests-software-testing.csproj
+++ b/autotests-software-testing/autotests-software-testing.csproj
@@ -137,7 +137,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccountDate.cs" />
     <Compile Include="AddNewGroupTest.cs" />
+    <Compile Include="GroupData.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
