Создан базовый класс, в него перенесены все вспомогательные методы

--- a/autotests-software-testing/autotests-software-testing.csproj
+++ b/autotests-software-testing/autotests-software-testing.csproj
@@ -142,6 +142,7 @@
     <Compile Include="AddNewGroupTest.cs" />
     <Compile Include="ContactData.cs" />
     <Compile Include="GroupData.cs" />
+    <Compile Include="TestBase.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
