Добавлены менеджер, классы-помощники, настроена инициализация помощников через менеджер

--- a/autotests-software-testing/autotests-software-testing.csproj
+++ b/autotests-software-testing/autotests-software-testing.csproj
@@ -137,17 +137,23 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AccountDate.cs" />
-    <Compile Include="AddNewContactTest.cs" />
-    <Compile Include="AddNewGroupTest.cs" />
-    <Compile Include="ContactData.cs" />
-    <Compile Include="GroupData.cs" />
-    <Compile Include="TestBase.cs" />
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="Model\AccountDate.cs" />
+    <Compile Include="Tests\ContactTests.cs" />
+    <Compile Include="Tests\GroupTests.cs" />
+    <Compile Include="AppManager\ApplicationManager.cs" />
+    <Compile Include="Model\ContactData.cs" />
+    <Compile Include="Model\GroupData.cs" />
+    <Compile Include="AppManager\ContactHelper.cs" />
+    <Compile Include="AppManager\HelperBase.cs" />
+    <Compile Include="AppManager\GroupHelper.cs" />
+    <Compile Include="AppManager\NavigationHelper.cs" />
+    <Compile Include="AppManager\LoginHelper.cs" />
+    <Compile Include="Tests\TestBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="ClassDiagram2.cd" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
