--- a/autotests-software-testing/autotests-software-testing.csproj
+++ b/autotests-software-testing/autotests-software-testing.csproj
@@ -138,8 +138,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\AccountDate.cs" />
-    <Compile Include="Tests\ContactTests.cs" />
-    <Compile Include="Tests\GroupTests.cs" />
+    <Compile Include="Tests\ModifyContactTests.cs" />
+    <Compile Include="Tests\DeleteContactTests.cs" />
+    <Compile Include="Tests\CreationContactTests.cs" />
+    <Compile Include="Tests\ModifyGroupTests.cs" />
+    <Compile Include="Tests\DeleteGroupTests.cs" />
+    <Compile Include="Tests\CreationGroupTests.cs" />
     <Compile Include="AppManager\ApplicationManager.cs" />
     <Compile Include="Model\ContactData.cs" />
     <Compile Include="Model\GroupData.cs" />
