Код переделан под singleton и многопоточность

--- a/autotests-software-testing/autotests-software-testing.csproj
+++ b/autotests-software-testing/autotests-software-testing.csproj
@@ -152,6 +152,7 @@
     <Compile Include="AppManager\GroupHelper.cs" />
     <Compile Include="AppManager\NavigationHelper.cs" />
     <Compile Include="AppManager\LoginHelper.cs" />
+    <Compile Include="Tests\TestSuiteFixture.cs" />
     <Compile Include="Tests\TestBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
