Реализован тест для проверки информации о контакте на главной старнице  с инф-ей на странице редактирования контакта (Задание 11)

--- a/autotests-software-testing/autotests-software-testing.csproj
+++ b/autotests-software-testing/autotests-software-testing.csproj
@@ -138,6 +138,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\AccountDate.cs" />
+    <Compile Include="Tests\ContactInformationTests.cs" />
     <Compile Include="Tests\LoginTests.cs" />
     <Compile Include="Tests\ModifyContactTests.cs" />
     <Compile Include="Tests\DeleteContactTests.cs" />
