--- a/autotests-software-testing/app.config
+++ b/autotests-software-testing/app.config
@@ -1,5 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <system.data>
+		<DbProviderFactories>
+			<remove invariant="MySql.Data.MySqlClient" />
+			<add name="MySQL Data Provider"
+				 invariant="MySql.Data.MySqlClient"
+				 description=".Net Framework Data Provider for MySQL"
+				 type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data" />
+		</DbProviderFactories>
+	</system.data>
+	<connectionStrings>
+		<add name="AddressBook"
+			 connectionString="Server=vm-tisqanwork;Port=3306;Database=addressbook;Uid=root;Pwd=P@ssw0rd;charset=utf8;"
+			 providerName="MySql.Data.MySqlClient"/>
+	</connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -21,6 +35,14 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Text.Json" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-8.0.0.5" newVersion="8.0.0.5" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Diagnostics.DiagnosticSource" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.0.0.2" newVersion="7.0.0.2" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Bcl.AsyncInterfaces" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
