--- a/autotests-software-testing/packages.config
+++ b/autotests-software-testing/packages.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Google.Protobuf" version="3.21.9" targetFramework="net481" />
+  <package id="K4os.Compression.LZ4" version="1.3.5" targetFramework="net481" />
+  <package id="K4os.Compression.LZ4.Streams" version="1.3.5" targetFramework="net481" />
+  <package id="K4os.Hash.xxHash" version="1.0.8" targetFramework="net481" />
+  <package id="linq2db" version="5.4.1" targetFramework="net481" />
+  <package id="linq2db.MySql" version="5.4.1" targetFramework="net481" />
   <package id="Microsoft.ApplicationInsights" version="2.22.0" targetFramework="net481" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net481" />
   <package id="Microsoft.Testing.Extensions.Telemetry" version="1.5.3" targetFramework="net481" />
@@ -10,14 +16,18 @@
   <package id="Microsoft.TestPlatform.ObjectModel" version="17.12.0" targetFramework="net481" />
   <package id="MSTest.TestAdapter" version="2.2.10" targetFramework="net481" />
   <package id="MSTest.TestFramework" version="2.2.10" targetFramework="net481" />
+  <package id="MySql.Data" version="8.1.0" targetFramework="net481" />
   <package id="NUnit" version="4.3.2" targetFramework="net481" />
   <package id="NUnit3TestAdapter" version="5.0.0" targetFramework="net481" />
+  <package id="Portable.BouncyCastle" version="1.9.0" targetFramework="net481" />
   <package id="Selenium.Firefox.WebDriver" version="0.27.0" targetFramework="net481" />
   <package id="Selenium.Support" version="3.141.0" targetFramework="net481" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net481" />
   <package id="System.Buffers" version="4.6.0" targetFramework="net481" />
   <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net481" />
-  <package id="System.Diagnostics.DiagnosticSource" version="5.0.0" targetFramework="net481" />
+  <package id="System.Configuration.ConfigurationManager" version="4.4.1" targetFramework="net481" />
+  <package id="System.Diagnostics.DiagnosticSource" version="7.0.2" targetFramework="net481" />
+  <package id="System.IO.Pipelines" version="5.0.2" targetFramework="net481" />
   <package id="System.Memory" version="4.6.0" targetFramework="net481" />
   <package id="System.Numerics.Vectors" version="4.6.0" targetFramework="net481" />
   <package id="System.Reflection.Metadata" version="1.6.0" targetFramework="net481" />
@@ -26,4 +36,5 @@
   <package id="System.Text.Json" version="8.0.5" targetFramework="net481" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net481" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net481" />
+  <package id="ZstdSharp.Port" version="0.7.1" targetFramework="net481" />
 </packages>
