--- a/autotests-software-testing/autotests-software-testing.csproj
+++ b/autotests-software-testing/autotests-software-testing.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Model\AccountDate.cs" />
     <Compile Include="Model\GroupContactRelation.cs" />
     <Compile Include="Model\AddressbookDB.cs" />
+    <Compile Include="Tests\DeleteContactToGroupTests.cs" />
     <Compile Include="Tests\AddingContactToGroupTests.cs" />
     <Compile Include="Tests\ContactTestBase.cs" />
     <Compile Include="Tests\GroupTestBase.cs" />
